# cornerback

./: .gitignore  Cargo.toml  README.md  cornerbackd.json
cornerback-core/: Cargo.toml
cornerback-core/examples/: join_channel_orders.rs  splitter_collector_pipeline.rs  webhook_pipeline.rs
cornerback-core/src/: lib.rs  models.rs  store.rs
cornerback-core/src/channels/: README.md  buffer.rs  collector.rs  core.rs  examples.rs  filter.rs  join.rs  mod.rs  process.rs  splitter.rs  transform.rs
cornerback-postgres-eventstore/: Cargo.toml  README.md  docker-compose.yml  setup.sql
cornerback-postgres-eventstore/src/: store.rs
cornerbackd/: Cargo.toml
cornerbackd/src/: app.rs  config.rs  error.rs  main.rs  routes.rs
cornerbackd/src/middleware/: mod.rs  request_id.rs  trace.rs
cornerbackd/src/routes/: mod.rs  router.rs  shared.rs  tests.rs
cornerbackd/src/routes/handlers/: get_event.rs  handle_event.rs  intercept.rs  list_webhook_events.rs  mod.rs  replay_event.rs
