[package]
edition = "2024"
name = "cornerback-core"
version = "0.1.0"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
chrono = {version = "0.4.44", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
tokio = {version = "1.50.0", features = ["sync", "full"]}
uuid = {version = "1", features = ["v4", "serde"]}
