[package]
edition = "2024"
name = "cornerback-postgres-eventstore"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
cornerback-core = {path = "../cornerback-core"}
serde_json = "1"
sqlx = {version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"]}
uuid = "1"
