[package]
edition = "2024"
name = "cornerbackd"
version = "0.1.0"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = "0.4"
serde_json = "1"
sqlx = {version = "0.7", features = ["runtime-tokio", "postgres"]}
tokio = {version = "1", features = ["full"]}
uuid = "1"

cornerback-core = {path = "../cornerback-core"}
cornerback-postgres-eventstore = {path = "../cornerback-postgres-eventstore"}
tower = "0.5.3"
hyper = "1.8.1"
