[package]
edition = "2024"
name = "cornerbackd"
version = "0.1.0"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = "0.4"
cornerback-core = {path = "../cornerback-core"}
cornerback-postgres-eventstore = {path = "../cornerback-postgres-eventstore"}
hyper = "1.8.1"
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.7", features = ["runtime-tokio", "postgres"]}
tokio = {version = "1", features = ["full"]}
toml = "0.8"
tower = "0.5.3"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
uuid = "1"
